<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarContactoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_editar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/name_hint"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/e_mail"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/e_mail_hint"
                android:inputType="textWebEmailAddress"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/phone"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/web"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/web_hint"
                android:inputType="textWebEditText"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/street"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/street_hint"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/city"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/city_hint"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/zipcode"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/et_editar_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:gravity="left"
                android:hint="@string/zipcode_hint"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded"
                tools:targetApi="o" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_editar_guardar"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="47sp"
            android:layout_marginBottom="18sp"
            android:background="@color/colorPrimary"
            android:padding="9dp"
            android:text="@string/guardar_cambios" />

    </LinearLayout>

</ScrollView>